FlexLayout replaced by Material Grid List in movie-cast component and movie-crew component, gaps between cards fixed, responsive breakpoints added

--- a/src/app/movies/movie-cast/movie-cast.component.scss
+++ b/src/app/movies/movie-cast/movie-cast.component.scss
@@ -1,3 +1,6 @@
 .container-cast {
     padding: 2%;
 }
+/*.tile-cast{
+    margin-top: 5px;
+}*/
